src/stylesheets/_design.sass
body
  min-width: 320px
  font-weight: 700

.row
  +breakpoint(small2)
    padding:
      left: 1rem
      right: 1rem
  +breakpoint(medium)
    padding:
      left: 5vw
      right: 5vw
  +breakpoint(xlarge)
    padding:
      left: 6rem
      right: 6rem

i
  font-weight: 400




///////////////////////////////////////////////
////////////        HEADER         ////////////
///////////////////////////////////////////////
.logo
  font-size: 2rem
  font-weight: 700
  margin:
    bottom: .5rem
    top: .5rem

  a
    color: $secondary-color

  +breakpoint(small2)
    text-align: left

  img
    padding-right: .5rem
    +breakpoint(small only)
      width: 240px
      display: block
      margin: 0 auto
      padding-top: 1rem

  +breakpoint(medium)
    margin:
      bottom: 1.5rem
      top: 1.5rem
    img
      padding-right: 1rem

  +breakpoint(xlarge)
    margin:
      bottom: 3rem
      top: 3rem
    img
      position: fixed
      margin:
        top: -1rem
        left: -6.25rem


///////////////////////////////////////////////
////////////        FOOTER         ////////////
///////////////////////////////////////////////
.footer
  background: lighten($primary-color, 6)
  padding:
    top: 4rem
    bottom: 4rem

  h3
    font-size: 100%

  +breakpoint(small only)
    .column:last-child
      h3
        padding-top: 1.33rem

  a
    display: block
    color: $white

  .copyright
    padding-top: 1.33rem

    a
      display: inline-block
    img
      padding:
        left: 0.75rem
        right: 0.75rem




///////////////////////////////////////////////
//////////         ANIMATIONS         /////////
///////////////////////////////////////////////
.spinner
  width: 90px
  text-align: center

  .bounce1, .bounce2, .bounce3
    float: left
    width: 10px
    height: 10px
    padding: 0 !important
    margin: 2px
    border-radius: 100%
    display: inline-block
    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both
    animation: sk-bouncedelay 1.4s infinite ease-in-out both

  .bounce1
    -webkit-animation-delay: -0.32s
    animation-delay: -0.32s

  .bounce2
    -webkit-animation-delay: -0.16s
    animation-delay: -0.16s

.chatblock.bot
  .spinner
    .bounce1, .bounce2, .bounce3
      background-color: white

.chatblock.user
  .spinner
    .bounce1, .bounce2, .bounce3
      background-color: #0976F2

@-webkit-keyframes sk-bouncedelay
  0%, 80%, 100%
    -webkit-transform: scale(0)

  40%
    -webkit-transform: scale(1)

@keyframes sk-bouncedelay
  0%, 80%, 100%
    -webkit-transform: scale(0)
    transform: scale(0)

  40%
    -webkit-transform: scale(1)
    transform: scale(1)

///////////////////////////////////////////////
////////////         CONVO         ////////////
///////////////////////////////////////////////

.bubble, .link, .linklist
  float: left
  clear: both
  border-radius: 6px
  margin: 8px 0
  padding: 16px 24px
  visibility: hidden

.bubble, .link, .linklist
  &.shown
    visibility: visible

.bubble
  background: lighten($primary-color, 6)

.link
  background: $secondary-color

.linklist
  margin: 0
  padding: 0 0 10px 0
  list-style: none

  li
    float: left
    background: $secondary-color
    color: $secondary-color
    margin: 0 10px 0 0
    padding: 20px
    border-radius: 6px

    a
      display: list-item
      width: 180px
      text-decoration: none
      color: #0976F2

      img
        width: 100%
        margin: 0 0 10px 0

.link a
  color: #0976F2
  text-decoration: none

  &:visited
    color: #0976F2
    text-decoration: none

  &:hover
    text-decoration: underline

.chatblock, .inputblock
  display: block
  width: 100%
  clear: both
  position: relative

  img
    width: 80%
    margin: 10% auto
    display: block

.chatblock.user .bubble.shown:before
  display: block
  position: absolute
  content: ' '
  width: 0
  height: 0
  border-top: 10px solid transparent
  border-bottom: 10px solid transparent
  border-left: 10px solid white
  right: -10px
  top: 25px

.chatblock.bot .bubble.shown:before
  display: block
  position: absolute
  content: ' '
  width: 0
  height: 0
  border-top: 10px solid transparent
  border-bottom: 10px solid transparent
  border-right: 10px solid lighten($primary-color, 6)
  left: -10px
  top: 25px

.user .bubble
  float: right
  background: white
  color: #0976F2

.bot .bubble
  float: left

.bot .bubble, .user .bubble
  max-width: 90%
  +breakpoint(medium)
    max-width: 75%
  +breakpoint(large)
    max-width: 66%

